--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: Home
 ---
 
 <div class="hero">
-  <img src="{{ site.baseurl }}{{ site.hero.image }}" />
-  <p>{{ site.hero.caption }}</p>
+  <img src="/public/img/home.jpeg" />
+  <p><strong>2017.08.29</strong></p>
 </div>
